--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,17 @@
-@import-normalize; /* bring in normalize.css styles */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  @apply transition-colors duration-300 ease-in-out;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Темна тема */
+.dark {
+  @apply bg-gray-900 text-gray-100;
+}
+
+/* Світла тема */
+body {
+  @apply bg-gray-100 text-gray-900;
 }
